--- a/assets/css/styles-9.css
+++ b/assets/css/styles-9.css
@@ -294,7 +294,7 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
 }
 
 #home .container{
-    color: #0A86E7;
+    color: #FFFFFF;
     position: fixed;
     top: 50%;
     width: 100% !important;
