--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,14 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
     'Open Sans', 'Helvetica Neue', sans-serif;
   min-height: 100vh;
+  height: auto;
 }
 
 body {
-  background-image: linear-gradient(to bottom, #00587A, #008891);
+  background-image: linear-gradient(to bottom, #E7E7DE, #008891, #00587A, #0F3057);
+  /* background-image: linear-gradient(to bottom, #0F3057, #00587A, #008891, #E7E7DE); */
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   align-items: center;
   justify-content: center;
 }
